# coreguard

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: coreguard.rb
src/coreguard/: __main__.py  blocklist.py  cache.py  cli.py  config.py  daemon.py  dashboard.py  dns_server.py  filtering.py  logging_config.py  menubar.py  network.py  notify.py  query_db.py  safesearch.py  schedule.py  stats.py  upstream.py
tests/: test_blocklist.py  test_cache.py  test_cli.py  test_config.py  test_daemon.py  test_dashboard.py  test_dns_server.py  test_filtering.py  test_integration.py  test_logging_config.py  test_menubar.py  test_network.py  test_notify.py  test_query_db.py  test_safesearch.py  test_schedule.py  test_stats.py  test_upstream.py
tests/fixtures/: sample_adblock.txt  sample_hosts.txt
