[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coreguard"
version = "1.0.0"
description = "DNS-based ad/tracker blocking for macOS"
requires-python = ">=3.10"
dependencies = [
    "dnslib>=0.9.24",
    "click>=8.0",
    "httpx[http2]>=0.24",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "aioquic>=1.0",
]

[project.scripts]
coreguard = "coreguard.cli:main"
coreguard-status = "coreguard.menubar:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
menubar = ["rumps>=0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
